# GemDroid_QEMU

./: README.md
gemdroid_qemu/: .cproject  .project  Makefile.android  Makefile.target  cpu-exec.c  cpus.c  disas.c  gemdroid-tracer.c  gemdroid-tracer.h  test2.txt  translate-all.c  vl-android.c
gemdroid_qemu/android/: resource.c
gemdroid_qemu/android/base/sockets/: SocketUtils.cpp
gemdroid_qemu/android/camera/: camera-capture-linux.c  camera-service.c
gemdroid_qemu/android/skin/: window.c
gemdroid_qemu/d4-7/: Makefile  config.cache  config.h  config.status  dineroIV
gemdroid_qemu/d4-7-64bit/: Makefile  Makefile.in  cmdmain.c  d4.3  d4.h  dineroIV
gemdroid_qemu/hw/android/goldfish/: audio.c  fb.c  trace.c
gemdroid_qemu/include/exec/: exec-all.h  softmmu_template.h
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-1.6.3/: autogen-clean.sh  configure.ac
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-1.6.3/debian/: Changelog  mjpg-streamer.install
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-1.6.3/plugins/input_uvc/: input_uvc.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-1.6.3/plugins/output_http/: httpd.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/: autogen.sh  configure
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/autom4te.cache/: output.0  requests  traces.0  traces.1
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/debian/: README.Debian  README.source  rules
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/plugins/: Makefile.am
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/plugins/input_file/: input_file.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/plugins/input_gspcav1/: spcautils.h  spcav4l.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/plugins/output_file/: output_file.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/plugins/output_http/: httpd.c
gemdroid_qemu/mjpg-streamer-read-only/mjpg-streamer-2.0/src/: mjpg_streamer.h
gemdroid_qemu/slirp-android/: ip_input.c  ip_output.c
gemdroid_qemu/target-arm/: cpu.h  translate.c
gemdroid_qemu/target-i386/: cpu.h  translate.c
gemdroid_qemu/target-mips/: cpu.h
